# vs-queue-monitor

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  Run VS Queue Monitor.bat  TODO.md  _engine_raw.py  app.js  bootstrap-windows.cmd  bootstrap.py  index.html  main-tui.py  monitor-tui.py  monitor.py  monitor.sh  package.json  patch-input.txt  push-debug.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-tui.txt  requirements.txt  run-vs-queue-monitor.sh  setup-push-notifications.py  styles.css  sw.js  vs-queue-monitor.cmd  vsqm.cmd
.agents/: shared-instructions.md
.claude/: settings.json  settings.local.json
.cursor/: cli.json
.cursor/rules/: design-doc.mdc  git-commit.mdc  monitor-behavior.mdc  open-source-deps.mdc  shared-agent-guidance.mdc  ux-seamless-flow.mdc  visual-language.mdc
.cursor/skills/ui-ux-expert-analysis/: SKILL.md
.github/: release.yml
.github/workflows/: ci.yml  pages.yml  release-notes.yml
.secrets/: vapid_private.pem
assets/: README.txt
docs/: DESIGN.md  GUI-TUI-PARITY.md  LIBRARY_REFACTOR.md  README.md  REGRESSIONS.md  TODO.md  TUI-LIMITATIONS.md  UI-PARITY.md  UI-UX-PARITY.md  WEB-PLATFORM.md  WEB_UI_REGRESSIONS.md  real-life-ui-patterns.md
scripts/: build-dist.mjs  build-dist.py  dedup_session_history.py
tests/: conftest.py  test_interrupted_elapsed.py  test_notifications_ui.py  test_pixel_alignment.py  test_release_smoke.py  test_session_history.py  test_ui_visual.py  test_web_ui.py
tools/: build_engine.py  strip_gui.py
vs_queue_monitor/: __init__.py  cli.py  core.py  desktop_notify.py  engine.py  gui.py  hooks.py  refs.py  tui.py
vs_queue_monitor/web/: __init__.py  hooks_web.py  push.py  server.py  theme.py  tray.py  webview_win.py
vs_queue_monitor/web/static/: app.js  graph_canvas.js  index.html  notify-sw.js  styles.css  sw.js
